// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput can set autocomplete 1`] = `
<input
  autoComplete="on"
  className="grommetux-text-input grommetux-input"
  defaultValue={undefined}
  onFocus={[Function]}
  onInput={[Function]}
  onKeyDown={[Function]}
  placeholder={undefined}
  value={undefined}
/>
`;

exports[`TextInput has correct default options 1`] = `
<input
  autoComplete="off"
  className="grommetux-text-input grommetux-input"
  defaultValue={undefined}
  id="item1"
  name="item-1"
  onFocus={[Function]}
  onInput={[Function]}
  onKeyDown={[Function]}
  placeholder={undefined}
  value="one"
/>
`;
